{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 36,
  "lineage": "791797c6-24e2-18ac-3f7d-5a8b73072ec0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_vpc1_to_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-12T00:20:43.238-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/platform-452421/global/firewalls/allow-vpc1-to-vpc2",
            "log_config": [],
            "name": "allow-vpc1-to-vpc2",
            "network": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/networks/mypeering-01",
            "priority": 1000,
            "project": "platform-452421",
            "self_link": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/firewalls/allow-vpc1-to-vpc2",
            "source_ranges": [
              "10.1.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_vpc2_to_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].region2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-12T00:20:44.210-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/platform-452421/global/firewalls/allow-vpc2-to-vpc1",
            "log_config": [],
            "name": "allow-vpc2-to-vpc1",
            "network": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/networks/mypeering-02",
            "priority": 1000,
            "project": "platform-452421",
            "self_link": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/firewalls/allow-vpc2-to-vpc1",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/platform-452421/global/networks/mypeering-01",
            "mtu": 0,
            "name": "mypeering-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5419024377221778267",
            "numeric_id": "5419024377221778267",
            "project": "platform-452421",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/networks/mypeering-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/platform-452421/global/networks/mypeering-02",
            "mtu": 0,
            "name": "mypeering-02",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "679783095733095259",
            "numeric_id": "679783095733095259",
            "project": "platform-452421",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/networks/mypeering-02"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "vpc1_to_vpc2_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-03-12T00:20:43.216-07:00",
            "description": "",
            "dest_range": "10.1.0.0/24",
            "id": "projects/platform-452421/global/routes/vpc1-to-vpc2-route",
            "name": "vpc1-to-vpc2-route",
            "network": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/networks/mypeering-01",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "platform-452421",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/routes/vpc1-to-vpc2-route",
            "tags": null,
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "vpc2_to_vpc1_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-03-12T00:20:44.195-07:00",
            "description": "",
            "dest_range": "10.0.0.0/24",
            "id": "projects/platform-452421/global/routes/vpc2-to-vpc1-route",
            "name": "vpc2-to-vpc1-route",
            "network": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/networks/mypeering-02",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "platform-452421",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/routes/vpc2-to-vpc1-route",
            "tags": null,
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-12T00:20:43.818-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/platform-452421/regions/asia-east1/subnetworks/subnet1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/networks/mypeering-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "platform-452421",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/platform-452421/regions/asia-east1/subnetworks/subnet1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2479118833613048612
          },
          "dependencies": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"].region2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-12T00:20:45.248-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/platform-452421/regions/asia-northeast1/subnetworks/subnet2",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/platform-452421/global/networks/mypeering-02",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "platform-452421",
            "purpose": "PRIVATE",
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/platform-452421/regions/asia-northeast1/subnetworks/subnet2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5551636023676275490
          },
          "dependencies": [
            "google_compute_network.vpc2"
          ]
        }
      ]
    }
  ]
}